Search: Prevent visible page scroll when the search modal is open on iOS (#392)
* Header: Fix button from appearing active when the menu is closed

The button is still focused when the menu is closed, which makes it look active when using a pointer device. When using a keyboard, the outline also appears, which makes it clear where focus is.

* Search: Prevent visible page scroll when the modal is open on small screens.

--- a/mu-plugins/blocks/global-header-footer/postcss/header/search.pcss
+++ b/mu-plugins/blocks/global-header-footer/postcss/header/search.pcss
@@ -42,7 +42,7 @@
 		background-position: center;
 
 		&:hover,
-		&:focus {
+		&:focus-visible {
 			background-color: var(--wp-global-header--background-color--hover);
 		}
 
